--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <link rel="apple-touch-startup-image" href="meta/apple-touch-startup-image-640x920.png"  media="(device-width: 320px) and (device-height: 480px) and (-webkit-device-pixel-ratio: 2)"> <!-- iPhone, retina -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
+  <meta name="description" content="Play the 2048 game! Combine tiles using arrow keys and strive to reach the 2048 tile. Enjoy seamless gameplay on any device!">
+  <meta name="keywords" content="2048,2048 game, play 2048 online, merge tiles game, official 2048 version, how to play 2048, Gabriele Cirulli 2048, puzzle games online, 2048 mobile game">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4100097849584223"
      crossorigin="anonymous"></script>
 </head>
