--- a/index.html
+++ b/index.html
@@ -107,5 +107,6 @@
   <script src="js/local_storage_manager.js"></script>
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
+  <script src="generateSitemap.js"></script>
 </body>
 </html>
