change2 generateSitemap.js

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     </p>
   </div>
 
+  <script src="js/generateSitemap.js"></script>
   <script src="js/bind_polyfill.js"></script>
   <script src="js/classlist_polyfill.js"></script>
   <script src="js/animframe_polyfill.js"></script>
@@ -107,6 +108,5 @@
   <script src="js/local_storage_manager.js"></script>
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
-  <script src="generateSitemap.js"></script>
 </body>
 </html>
